# SmartCalc-v2.0-C-

./: README.md
src/: CMakeLists.txt  Makefile  controller.h  main.cpp  model.cpp  model.h
src/tests/: model_tests.cpp  tests.h
